--- a/PanoramaViewer/PanoramaViewer.csproj
+++ b/PanoramaViewer/PanoramaViewer.csproj
@@ -4,6 +4,11 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <PackageId>PanoramaViewer</PackageId>
+    <Description>A 360-degree panoramic image viewer component for Blazor.</Description>
+    <Version>1.0.1</Version>
+    <Authors>Darrell Dumas</Authors>
+    <Company>Enstoa, Inc.</Company>
   </PropertyGroup>
 
   <ItemGroup>
